# KNN-Multi-Threading-Server-Classifier

./: CMakeLists.txt  Canberra.cpp  Canberra.h  Catalog.cpp  Catalog.h  Chebyshev.h  ClientHandler.cpp  ClientHandler.h  Command.h  Database.h  DefaultIO.cpp  Distance.cpp  Distance.h  Euclidean.cpp  Manhattan.cpp  Minkowski.cpp  Minkowski.h  README.md  Server.cpp  Server.h  makefile
Classify/: Catalog.cpp  Catalog.h  ClassificationLogic.cpp  ClassificationLogic.h  Database.cpp  Database.h  TestCatalog.cpp  TestCatalog.h  TrainCatalog.cpp  TrainCatalog.h  testCatalog.cpp  testCatalog.h  trainCatalog.cpp  trainCatalog.h
Client/: Client.cpp  Client.h
Commands/: ClassifyDataCommand.cpp  ClassifyDataCommand.h  Command.cpp  Command.h  DisplayResultsCommand.cpp  DisplayResultsCommand.h  DownloadResultsCommand.cpp  DownloadResultsCommand.h  ExitCommand.cpp  ExitCommand.h  SettingsCommand.cpp  SettingsCommand.h  UploadDataCommand.cpp  UploadDataCommand.h
Distances/: Chebyshev.cpp  Euclidean.h  Manhattan.h
IO's/: CLI.cpp  CLI.h  DefaultIO.h  SocketIO.cpp  SocketIO.h
IOs/: CLI.cpp  CLI.h  DefaultIO.cpp  DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
Server/: ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h
